latest updates, sdl-mixer
git-svn-id: file:///source/coreland/sysdeps/trunk@243 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/SYSDEPS/sdl-mixer-flags/Makefile
+++ b/SYSDEPS/sdl-mixer-flags/Makefile
@@ -1,2 +1,14 @@
-it:
-clean:
+sd_out="../../sysdeps.out"
+fileout="../../sdl-mixer-flags"
+
+sysdep: do_sdl-mixer-flags
+clean: sdl-mixer-flags_clean
+
+tempf="sdl-mixer-flags.out"
+
+do_sdl-mixer-flags:
+	./sdl-mixer-flags 1>>${tempf}
+	cp ${tempf} ${fileout}
+
+sdl-mixer-flags_clean:
+	rm -f ${fileout} ${tempf}
