--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,8 +1,8 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_ch_flags sd_direntry sd_endian sd_floats sd_integers sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-libs sd_systype sd_x86cpuid sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-image-flags sd_sdl-image-libs sd_opengl-flags sd_opengl-libs sd_sdl-ttf-flags sd_sdl-ttf-libs
-sysdeps_clean:  sd_ch_flags_clean sd_direntry_clean sd_endian_clean sd_floats_clean sd_integers_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_systype_clean sd_x86cpuid_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean
+sysdeps:  sd_ch_flags sd_direntry sd_endian sd_floats sd_integers sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-libs sd_systype sd_x86cpuid sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-image-flags sd_sdl-image-libs sd_opengl-flags sd_opengl-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_dlopen
+sysdeps_clean:  sd_ch_flags_clean sd_direntry_clean sd_endian_clean sd_floats_clean sd_integers_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_systype_clean sd_x86cpuid_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_dlopen_clean
 
 sd_ch_flags:
 	(cd ch_flags && make)
@@ -98,6 +98,11 @@ sd_sdl-ttf-libs:
 	(cd sdl-ttf-libs && make)
 sd_sdl-ttf-libs_clean:
 	(cd sdl-ttf-libs && make clean)
+
+sd_dlopen:
+	(cd dlopen && make)
+sd_dlopen_clean:
+	(cd dlopen && make clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
