--- a/SYSDEPS/sdl-ttf-flags/Makefile
+++ b/SYSDEPS/sdl-ttf-flags/Makefile
@@ -7,8 +7,10 @@ clean: sdl-ttf-flags_clean
 tempf="sdl-ttf-flags.out"
 
 do_sdl-ttf-flags:
-	./sdl-ttf-flags 1>>${tempf}
-	cp ${tempf} ${fileout}
+	@echo sdl-ttf-flags run
+	@./sdl-ttf-flags 1>>${tempf}
+	@cp ${tempf} ${fileout}
 
 sdl-ttf-flags_clean:
-	rm -f ${fileout} ${tempf}
+	@echo sdl-ttf-flags clean
+	@rm -f ${fileout} ${tempf}
