--- a/SYSDEPS/sdl-flags/Makefile
+++ b/SYSDEPS/sdl-flags/Makefile
@@ -7,8 +7,10 @@ clean: sdl-flags_clean
 tempf="sdl-flags.out"
 
 do_sdl-flags:
-	./sdl-flags 1>>${tempf}
-	cp ${tempf} ${fileout}
+	@echo sdl-flags run
+	@./sdl-flags 1>>${tempf}
+	@cp ${tempf} ${fileout}
 
 sdl-flags_clean:
-	rm -f ${fileout} ${tempf}
+	@echo sdl-flags clean
+	@rm -f ${fileout} ${tempf}
