--- a/SYSDEPS/sdl-libs/Makefile
+++ b/SYSDEPS/sdl-libs/Makefile
@@ -7,8 +7,10 @@ clean: sdl-libs_clean
 tempf="sdl-libs.out"
 
 do_sdl-libs:
-	./sdl-libs 1>>${tempf}
-	cp ${tempf} ${fileout}
+	@echo sdl-libs run
+	@./sdl-libs 1>>${tempf}
+	@cp ${tempf} ${fileout}
 
 sdl-libs_clean:
-	rm -f ${fileout} ${tempf}
+	@echo sdl-libs clean
+	@rm -f ${fileout} ${tempf}
