--- a/SYSDEPS/ch_flags/Makefile
+++ b/SYSDEPS/ch_flags/Makefile
@@ -8,12 +8,12 @@ tempf="_ch_flags.h"
 tempsys="sysdeps_line.out"
 
 do_ch_flags:
+	@echo SYSDEPS ch_flags run create ${tempf}
 	@./ch_flags ${tempf} ${tempsys}
-	@echo ch_flags run
 	@cp ${tempf} ${header}
 	@cat ${tempsys} >> ${sd_out}
 
 ch_flags_clean:
-	@echo ch_flags clean
+	@echo SYSDEPS ch_flags clean
 	@rm -f tryext2 trychflags
 	@rm -f ${header} ${tempf} ${tempsys}
