--- a/SYSDEPS/integers/Makefile
+++ b/SYSDEPS/integers/Makefile
@@ -18,7 +18,8 @@ tempu64="_uint64.h"
 tempsys="sysdep_line.out"
 
 integers:
-	@echo integers run
+	@echo SYSDEPS integers run create ${tempi16} ${tempi32} ${tempi64} \
+	${tempu16} ${tempu32} ${tempu64} ${tempsys}
 	@./make-integers ${tempi16} ${tempi32} ${tempi64} ${tempu16} \
   ${tempu32} ${tempu64} ${tempsys}
 	@cp ${tempi16} ${int16_h}
@@ -30,7 +31,7 @@ integers:
 	@cat ${tempsys} >> ${sd_out}
 
 integers_clean:
-	@echo integers clean
+	@echo SYSDEPS integers clean
 	@rm -f ${int16_h} ${int32_h} ${int64_h}
 	@rm -f int16_make int32_make int64_make
 	@rm -f ${uint16_h} ${uint32_h} ${uint64_h}
