--- a/SYSDEPS/png-libs/Makefile
+++ b/SYSDEPS/png-libs/Makefile
@@ -7,10 +7,10 @@ clean: png-libs_clean
 tempf="png-libs.out"
 
 do_png-libs:
-	@echo png-libs run
+	@echo SYSDEPS png-libs run create libs-png
 	@./png-libs 1>>${tempf}
 	@cp ${tempf} ${fileout}
 
 png-libs_clean:
-	@echo png-libs clean
+	@echo SYSDEPS png-libs clean
 	@rm -f ${fileout} ${tempf}
