--- a/SYSDEPS/sdl-mixer-flags/Makefile
+++ b/SYSDEPS/sdl-mixer-flags/Makefile
@@ -7,10 +7,10 @@ clean: sdl-mixer-flags_clean
 tempf="sdl-mixer-flags.out"
 
 do_sdl-mixer-flags:
-	@echo sdl-mixer-flags run
+	@echo SYSDEPS sdl-mixer-flags run create flags-sdl-mixer
 	@./sdl-mixer-flags 1>>${tempf}
 	@cp ${tempf} ${fileout}
 
 sdl-mixer-flags_clean:
-	@echo sdl-mixer-flags clean
+	@echo SYSDEPS sdl-mixer-flags clean
 	@rm -f ${fileout} ${tempf}
