--- a/SYSDEPS/sdl-mixer-libs/Makefile
+++ b/SYSDEPS/sdl-mixer-libs/Makefile
@@ -7,10 +7,10 @@ clean: sdl-mixer-libs_clean
 tempf="sdl-mixer-libs.out"
 
 do_sdl-mixer-libs:
-	@echo sdl-mixer-libs run
+	@echo SYSDEPS sdl-mixer-libs run create libs-sdl-mixer
 	@./sdl-mixer-libs 1>>${tempf}
 	@cp ${tempf} ${fileout}
 
 sdl-mixer-libs_clean:
-	@echo sdl-mixer-libs clean
+	@echo SYSDEPS sdl-mixer-libs clean
 	@rm -f ${fileout} ${tempf}
