--- a/SYSDEPS/sdl-ttf-libs/Makefile
+++ b/SYSDEPS/sdl-ttf-libs/Makefile
@@ -7,10 +7,10 @@ clean: sdl-ttf-libs_clean
 tempf="sdl-ttf-libs.out"
 
 do_sdl-ttf-libs:
-	@echo sdl-ttf-libs run
+	@echo SYSDEPS sdl-ttf-libs run create libs-sdl-ttf
 	@./sdl-ttf-libs 1>>${tempf}
 	@cp ${tempf} ${fileout}
 
 sdl-ttf-libs_clean:
-	@echo sdl-ttf-libs clean
+	@echo SYSDEPS sdl-ttf-libs clean
 	@rm -f ${fileout} ${tempf}
