--- a/SYSDEPS/x86cpuid/Makefile
+++ b/SYSDEPS/x86cpuid/Makefile
@@ -6,10 +6,10 @@ clean: x86cpuid_clean
 tempsys="sysdeps_line.out"
 
 x86cpuid:
-	@echo x86cpuid run
+	@echo SYSDEPS x86cpuid run
 	@./x86cpuid.sh ${tempsys}
 	@./cat.sh ${tempsys} ${sd_out}
 
 x86cpuid_clean:
-	@echo x86cpuid clean
+	@echo SYSDEPS x86cpuid clean
 	@rm -f x86cpuid ${tempsys}
