--- a/SYSDEPS/signal/Makefile
+++ b/SYSDEPS/signal/Makefile
@@ -10,13 +10,13 @@ tempf2="sig_pmask.h"
 tempsys="sysdeps.out"
 
 do_signal:
-	@echo signal run
+	@echo SYSDEPS signal run create ${tempf1} ${tempf2} ${tempsys}
 	@./signal ${tempf1} ${tempf2} ${tempsys}
 	@cp ${tempf1} ${file1out}
 	@cp ${tempf2} ${file2out}
 	@cat ${tempsys} >> ${sd_out}
 
 signal_clean:
-	@echo signal clean
+	@echo SYSDEPS signal clean
 	@rm -f ${file1out} ${file2out} ${tempf1} ${tempf2} \
   ${tempsys} trysigact trysigpm
