--- a/SYSDEPS/sndfile-libs/DESCRIPTION
+++ b/SYSDEPS/sndfile-libs/DESCRIPTION
@@ -1,1 +1,1 @@
-linker flags to link against libpng (http://www.libpng.org)
+linker flags to link against libsndfile (http://www.mega-nerd.com/libsndfile/)
