--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,8 +1,8 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_ch_flags sd_direntry sd_endian sd_floats sd_integers sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-libs sd_systype sd_x86cpuid sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-image-flags sd_sdl-image-libs sd_opengl-flags sd_opengl-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_dlopen sd_signal sd_sndfile-flags sd_sndfile-libs sd_jack-flags sd_jack-libs
-sysdeps_clean:  sd_ch_flags_clean sd_direntry_clean sd_endian_clean sd_floats_clean sd_integers_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_systype_clean sd_x86cpuid_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_dlopen_clean sd_signal_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_jack-flags_clean sd_jack-libs_clean
+sysdeps:  sd_ch_flags sd_direntry sd_endian sd_floats sd_integers sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-libs sd_systype sd_x86cpuid sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-image-flags sd_sdl-image-libs sd_opengl-flags sd_opengl-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_dlopen sd_signal sd_sndfile-flags sd_sndfile-libs sd_jack-flags sd_jack-libs sd_corelib-flags sd_corelib-libs sd_corelib-libs-S sd_floatcast
+sysdeps_clean:  sd_ch_flags_clean sd_direntry_clean sd_endian_clean sd_floats_clean sd_integers_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-libs_clean sd_systype_clean sd_x86cpuid_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_dlopen_clean sd_signal_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_jack-flags_clean sd_jack-libs_clean sd_corelib-flags_clean sd_corelib-libs_clean sd_corelib-libs-S_clean sd_floatcast_clean
 
 sd_ch_flags:
 	@(cd ch_flags && ./run)
@@ -128,6 +128,26 @@ sd_jack-libs:
 	@(cd jack-libs && ./run)
 sd_jack-libs_clean:
 	@(cd jack-libs && ./clean)
+
+sd_corelib-flags:
+	@(cd corelib-flags && ./run)
+sd_corelib-flags_clean:
+	@(cd corelib-flags && ./clean)
+
+sd_corelib-libs:
+	@(cd corelib-libs && ./run)
+sd_corelib-libs_clean:
+	@(cd corelib-libs && ./clean)
+
+sd_corelib-libs-S:
+	@(cd corelib-libs-S && ./run)
+sd_corelib-libs-S_clean:
+	@(cd corelib-libs-S && ./clean)
+
+sd_floatcast:
+	@(cd floatcast && ./run)
+sd_floatcast_clean:
+	@(cd floatcast && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
