--- a/SYSDEPS/fltk11-libs-S/DESCRIPTION
+++ b/SYSDEPS/fltk11-libs-S/DESCRIPTION
@@ -1,1 +1,1 @@
-linker flags to statically link against fltk (http://www.fltk.org)
+linker flags to statically link against fltk-1.1.* (http://www.fltk.org)
