--- a/SYSDEPS/Makefile
+++ b/SYSDEPS/Makefile
@@ -1,8 +1,8 @@
 default: sysdeps
 clean: sysdeps_clean
 
-sysdeps:  sd_aio-mech sd_ch_flags sd_corelib-flags sd_corelib-libs-S sd_corelib-libs sd_direntry sd_dlopen sd_endian sd_fd sd_floatcast sd_floats sd_fltk11-flags sd_fltk11-libs-S sd_fltk11-libs sd_fltk2-flags sd_fltk2-libs-S sd_fltk2-libs sd_integers sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-image-flags sd_sdl-image-libs sd_sdl-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_select sd_signal sd_sndfile-flags sd_sndfile-libs sd_systype sd_x86cpuid sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S
-sysdeps_clean:  sd_aio-mech_clean sd_ch_flags_clean sd_corelib-flags_clean sd_corelib-libs-S_clean sd_corelib-libs_clean sd_direntry_clean sd_dlopen_clean sd_endian_clean sd_fd_clean sd_floatcast_clean sd_floats_clean sd_fltk11-flags_clean sd_fltk11-libs-S_clean sd_fltk11-libs_clean sd_fltk2-flags_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_integers_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_select_clean sd_signal_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_systype_clean sd_x86cpuid_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean
+sysdeps:  sd_aio-mech sd_ch_flags sd_corelib-flags sd_corelib-libs-S sd_corelib-libs sd_direntry sd_dlopen sd_fd sd_floatcast sd_floats sd_fltk11-flags sd_fltk11-libs-S sd_fltk11-libs sd_fltk2-flags sd_fltk2-libs-S sd_fltk2-libs sd_integers sd_jack-flags sd_jack-libs sd_opengl-flags sd_opengl-libs sd_png-flags sd_png-libs sd_sdl-flags sd_sdl-image-flags sd_sdl-image-libs sd_sdl-libs sd_sdl-mixer-flags sd_sdl-mixer-libs sd_sdl-ttf-flags sd_sdl-ttf-libs sd_select sd_signal sd_sndfile-flags sd_sndfile-libs sd_systype sd_x86cpuid sd_io_poll-flags sd_io_poll-libs-S sd_pdcgi-flags sd_pdcgi-libs-S sd_byteorder
+sysdeps_clean:  sd_aio-mech_clean sd_ch_flags_clean sd_corelib-flags_clean sd_corelib-libs-S_clean sd_corelib-libs_clean sd_direntry_clean sd_dlopen_clean sd_fd_clean sd_floatcast_clean sd_floats_clean sd_fltk11-flags_clean sd_fltk11-libs-S_clean sd_fltk11-libs_clean sd_fltk2-flags_clean sd_fltk2-libs-S_clean sd_fltk2-libs_clean sd_integers_clean sd_jack-flags_clean sd_jack-libs_clean sd_opengl-flags_clean sd_opengl-libs_clean sd_png-flags_clean sd_png-libs_clean sd_sdl-flags_clean sd_sdl-image-flags_clean sd_sdl-image-libs_clean sd_sdl-libs_clean sd_sdl-mixer-flags_clean sd_sdl-mixer-libs_clean sd_sdl-ttf-flags_clean sd_sdl-ttf-libs_clean sd_select_clean sd_signal_clean sd_sndfile-flags_clean sd_sndfile-libs_clean sd_systype_clean sd_x86cpuid_clean sd_io_poll-flags_clean sd_io_poll-libs-S_clean sd_pdcgi-flags_clean sd_pdcgi-libs-S_clean sd_byteorder_clean
 
 sd_aio-mech:
 	@(cd aio-mech && ./run)
@@ -38,11 +38,6 @@ sd_dlopen:
 	@(cd dlopen && ./run)
 sd_dlopen_clean:
 	@(cd dlopen && ./clean)
-
-sd_endian:
-	@(cd endian && ./run)
-sd_endian_clean:
-	@(cd endian && ./clean)
 
 sd_fd:
 	@(cd fd && ./run)
@@ -213,6 +208,11 @@ sd_pdcgi-libs-S:
 	@(cd pdcgi-libs-S && ./run)
 sd_pdcgi-libs-S_clean:
 	@(cd pdcgi-libs-S && ./clean)
+
+sd_byteorder:
+	@(cd byteorder && ./run)
+sd_byteorder_clean:
+	@(cd byteorder && ./clean)
 
 regen:
 	./gen-makefile > Makefile.tmp
