--- a/SYSDEPS/portaudio-flags/DESCRIPTION
+++ b/SYSDEPS/portaudio-flags/DESCRIPTION
@@ -1,1 +1,1 @@
-compiler flags to compile against libsndfile (http://www.mega-nerd.com/libsndfile/)
+compiler flags to compile against portaudio (http://www.portaudio.com/)
