--- a/SYSDEPS/portaudio-libs/DESCRIPTION
+++ b/SYSDEPS/portaudio-libs/DESCRIPTION
@@ -1,1 +1,1 @@
-linker flags to link against libsndfile (http://www.mega-nerd.com/libsndfile/)
+linker flags to link against portaudio (http://www.portaudio.com/)
