--- a/SYSDEPS/tiff-libs/DESCRIPTION
+++ b/SYSDEPS/tiff-libs/DESCRIPTION
@@ -1,1 +1,1 @@
-linker flags to link against libsndfile (http://www.mega-nerd.com/libsndfile/)
+linker flags to link against libtiff (http://www.libtiff.org)
