--- a/SYSDEPS/tiff-flags/DESCRIPTION
+++ b/SYSDEPS/tiff-flags/DESCRIPTION
@@ -1,1 +1,1 @@
-compiler flags to compile against libsndfile (http://www.mega-nerd.com/libsndfile/)
+compiler flags to compile against libtiff (http://www.libtiff.org)
